# mindmatrix-sample-plugin

./: .gitignore  README.md  pyproject.toml
scripts/: server.py
src/mindmatrix_sample_plugin/: __init__.py  _plugin.py  settings.py
src/mindmatrix_sample_plugin/agents/: __init__.py  chatter.py
