[project]
name = "mindmatrix-sample-plugin"
version = "0.1.0"
description = "MindMatrix Sample Plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mindmatrix>=0.1.0",
]

[project.entry-points."mindmatrix.plugin"]
msp = "mindmatrix_sample_plugin"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
